@@ -2,7 +2,9 @@ Nutch Change Log
 
 Release 2.2 - Current Development
 
-* backport NUTCH-1232 Remove site field from index-basic (lewismc)
+* NUTCH-1503 Configuration properties not in sync between FetcherReducer and nutch-default.xml (snagel + lewismc)
+
+* NUTCH-1394 backport NUTCH-1232 Remove site field from index-basic (lewismc)
 
 * NUTCH-1370 Expose exact number of urls injected @runtime (ferdy, snagel and lewismc)
    (includes commit for NUTCH-1471 make explicit which datastore urls are injected to)
